--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,5 @@
-# onezhjp
+# boocai
 
-This is onezhjp. I write blogs and publish projects here.
+This is boocai. I write blogs and publish projects here.
 
 GitHub: https://github.com/onezhjp
