Update page: pinyin-search

--- a/pages/projects/cnlorem.mdx
+++ b/pages/projects/cnlorem.mdx
@@ -2,9 +2,8 @@
 
 cnlorem 是一个随机生成中文句子的 Javascript/Typescript 库
 
-GitHub: https://github.com/onezhjp/cnlorem
-
-NPM: https://www.npmjs.com/package/cnlorem
+> GitHub: https://github.com/onezhjp/cnlorem  <br />
+> NPM: https://www.npmjs.com/package/cnlorem
 
 
 ## Live Demo
