--- a/pages/projects/pinyin-search.mdx
+++ b/pages/projects/pinyin-search.mdx
@@ -1,2 +1,9 @@
+# Pinyin Search • 拼音搜索
 
-https://github.com/onezhjp/pinyin-search
+Pinyin Search • 拼音搜索（[Chrome Web Store 地址](https://chrome.google.com/webstore/detail/pinyinsearch-%E2%80%A2-%E6%8B%BC%E9%9F%B3%E6%90%9C%E7%B4%A2/fejaoeigldmlmkplacjhhmbclogihako)），是一个支持拼音搜索的浏览器扩展，在地址栏输入`j`+`空格`，即可使用拼音搜索你的历史记录 🕒、书签 🔖、标签页 🔳，支持全拼、首字母、小鹤双拼。
+
+另外，如果选中了搜索结果里的标签页 🔳，会自动跳转到对应的标签页。
+
+![](../../public/p1.png)
+
+源码：https://github.com/onezhjp/pinyin-search
