--- a/pages/projects/cnlorem.mdx
+++ b/pages/projects/cnlorem.mdx
@@ -26,6 +26,10 @@ import cnlorem from 'cnlorem'
 console.log(cnlorem(50))
 // Output: 
 // 后成便现起常要德在个：公气主感斯工通。得当表下斯总望动界人己候建：手高所年日次諣第与。因能球罗海难只：会只得高。
+
+console.log(cnlorem({n: 50, en: 3}))
+// Output: 
+// 出心此然长无 dolor 该接将，认不那中行约经身死她者身方决头无论此此只着之 culpa，其望然亲同后。此经用独到 eu 内，文识次信量神都。
 ```
 
 
