--- a/pages/projects/cnlorem.mdx
+++ b/pages/projects/cnlorem.mdx
@@ -1,6 +1,6 @@
 # cnlorem
 
-cnlorem 是一个随机生成中英文混排句子的 Javascript 库
+cnlorem 是一个随机生成中英文句子（包含汉字、英文单词、标点）的 Javascript/Typescript 库
 
 > GitHub: https://github.com/onezhjp/cnlorem  <br />
 > NPM: https://www.npmjs.com/package/cnlorem
