--- a/pages/projects/cnlorem.mdx
+++ b/pages/projects/cnlorem.mdx
@@ -2,7 +2,7 @@
 
 cnlorem 是一个随机生成中英文句子（包含汉字、英文单词、标点）的 Javascript/Typescript 库
 
-> GitHub: https://github.com/zip97/cnlorem  <br />
+> GitHub: https://github.com/boocaii/cnlorem  <br />
 > NPM: https://www.npmjs.com/package/cnlorem
 
 
